--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,7 +1,7 @@
 #app {
 
   .main-container {
-    min-height: 100%;
+    height: auto;
     transition: margin-left .28s;
     position: relative;
   }
